--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "wu mp3 collection",
   "main": "app.ts",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx tsc && node src/seed.js prisma/allfiles.txt"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,9 @@
   },
   "homepage": "https://github.com/georgernstgraf/jukebox#readme",
   "dependencies": {
+    "@types/node": "^24.0.7",
     "hono": "^4.8.3",
-    "prisma": "^6.10.1"
+    "prisma": "^6.10.1",
+    "typescript": "^5.8.3"
   }
 }
