--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/georgernstgraf/jukebox#readme",
   "dependencies": {
+    "@prisma/client": "^6.10.1",
     "@types/node": "^24.0.7",
     "hono": "^4.8.3",
     "prisma": "^6.10.1",
