--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.ts",
   "type": "module",
   "scripts": {
-    "dev": "npx tsc && node src/seed.js prisma/allfiles.txt"
+    "dev": "npx tsc && node dist/seed.js prisma/allfiles.txt"
   },
   "repository": {
     "type": "git",
