--- a/package.json
+++ b/package.json
@@ -29,8 +29,13 @@
         "authenticate-pam": "^1.0.5",
         "file-type": "^21.0.0",
         "hono": "^4.8.3",
+        "memjs": "^1.3.2",
         "music-metadata": "^11.6.0",
         "prisma": "^6.10.1",
-        "typescript": "^5.8.3"
+        "typescript": "^5.8.3",
+        "uuid": "^11.1.0"
+    },
+    "devDependencies": {
+        "@types/memjs": "^1.3.3"
     }
 }
