--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "app.ts",
     "type": "module",
     "scripts": {
+        "start": "npx tsc && node --env-file=.env dist/app.js",
         "seed": "npx tsc && node --env-file=.env dist/seed.js prisma/allfiles.txt",
         "seedmac": "npx tsc && node --env-file=.env dist/seed.js prisma/allfiles_mac.txt",
         "seedprod": "npx tsc && node --env-file=.env dist/seed.js /home/suck/public_html/allfiles.txt"
@@ -24,6 +25,7 @@
     },
     "homepage": "https://github.com/georgernstgraf/jukebox#readme",
     "dependencies": {
+        "@hono/node-server": "^1.15.0",
         "@prisma/client": "^6.10.1",
         "@types/node": "^24.0.7",
         "authenticate-pam": "^1.0.5",
