--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "@prisma/client": "^6.10.1",
         "@types/node": "^24.0.7",
         "authenticate-pam": "^1.0.5",
+        "bcrypt": "^6.0.0",
+        "crypto": "^1.0.1",
         "file-type": "^21.0.0",
         "hono": "^4.8.3",
         "memjs": "^1.3.2",
@@ -38,6 +40,7 @@
         "uuid": "^11.1.0"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/memjs": "^1.3.3"
     }
 }
