--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "bcrypt": "^6.0.0",
         "crypto": "^1.0.1",
         "file-type": "^21.0.0",
+        "handlebars": "^4.7.8",
         "hono": "^4.8.3",
         "memjs": "^1.3.2",
         "music-metadata": "^11.6.0",
