--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "type": "module",
     "scripts": {
         "start": "npx tsc && node --env-file=.env dist/app.js",
-        "seed": "npx tsc && node --env-file=.env dist/seed.js prisma/allfiles.txt",
-        "seedmac": "npx tsc && node --env-file=.env dist/seed.js prisma/allfiles_mac.txt",
-        "seedprod": "npx tsc && node --env-file=.env dist/seed.js /home/suck/public_html/allfiles.txt"
+        "syncthink": "npx tsc && node --env-file=.env dist/sync.js prisma/allfiles.txt",
+        "syncmac": "npx tsc && node --env-file=.env dist/sync.js prisma/allfiles_mac.txt",
+        "syncprod": "npx tsc && node --env-file=.env dist/sync.js /home/suck/public_html/allfiles.txt"
     },
     "prisma": {
         "seed": "npm run seed"
