--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "start": "npx tsc && node --env-file=.env dist/app.js",
         "syncthink": "npx tsc && node --env-file=.env dist/sync.js prisma/allfiles.txt",
         "syncmac": "npx tsc && node --env-file=.env dist/sync.js prisma/allfiles_mac.txt",
-        "syncprod": "npx tsc && node --env-file=.env dist/sync.js /home/suck/public_html/allfiles.txt"
+        "syncprod": "npx tsc && node --env-file=.env dist/sync.js /home/suck/public_html/allfiles.txt",
+        "dev": "npx nodemon"
     },
     "prisma": {
         "seed": "npm run seed"
@@ -42,6 +43,7 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
-        "@types/memjs": "^1.3.3"
+        "@types/memjs": "^1.3.3",
+        "nodemon": "^3.1.10"
     }
 }
