--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "syncthink": "npx tsc && node --env-file=.env dist/sync.js prisma/allfiles.txt",
         "syncmac": "npx tsc && node --env-file=.env dist/sync.js prisma/allfiles_mac.txt",
         "syncprod": "npx tsc && node --env-file=.env dist/sync.js /home/suck/public_html/allfiles.txt",
+        "css": "npx purgecss --content 'partials/**/*.hbs' --content 'static/js/*.js' -o static/css --css raw/*.css -v",
         "dev": "npx nodemon"
     },
     "prisma": {
@@ -43,6 +44,7 @@
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
         "@types/memjs": "^1.3.3",
-        "nodemon": "^3.1.10"
+        "nodemon": "^3.1.10",
+        "purgecss": "^7.0.2"
     }
 }
