--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "main": "app.ts",
     "type": "module",
     "scripts": {
-        "start": "npx tsc && node --env-file=.env dist/app.js",
-        "syncthink": "npx tsc && node --env-file=.env dist/sync.js prisma/allfiles.txt",
-        "syncmac": "npx tsc && node --env-file=.env dist/sync.js prisma/allfiles_mac.txt",
-        "syncprod": "npx tsc && node --env-file=.env dist/sync.js /home/suck/public_html/allfiles.txt",
+        "start": "npx tsc && npm run css && node --env-file=.env dist/app.js",
+        "devstart": "node --env-file=.env dist/app.js",
+        "tsc": "npx tsc",
         "css": "npx purgecss --content 'partials/**/*.hbs' --content 'static/js/*.js' -o static/css --css raw/*.css -v",
+        "devcss": "cp raw/* static/css",
         "dev": "npx nodemon"
     },
     "prisma": {
@@ -38,13 +38,13 @@
         "memjs": "^1.3.2",
         "music-metadata": "^11.6.0",
         "prisma": "^6.11.1",
+        "purgecss": "^7.0.2",
         "typescript": "^5.8.3",
         "uuid": "^11.1.0"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
         "@types/memjs": "^1.3.3",
-        "nodemon": "^3.1.10",
-        "purgecss": "^7.0.2"
+        "nodemon": "^3.1.10"
     }
 }
